2019-11-14  Richard Sandiford  <richard.sandiford@arm.com>

	* call.c (build_conditional_expr_1): Use truth_type_for instead
	of build_same_sized_truth_vector_type.
	* typeck.c (build_vec_cmp): Likewise.

2019-11-14  Jakub Jelinek  <jakub@redhat.com>

	* parser.c (cp_parser_omp_context_selector): Don't require score
	argument to fit into shwi, just to be INTEGER_CST.  Diagnose
	negative score.
	* pt.c (tsubst_attribute): Likewise.

	* parser.c (cp_parser_omp_context_selector): Rename
	CTX_PROPERTY_IDLIST to CTX_PROPERTY_NAME_LIST, add CTX_PROPERTY_ID.
	Use CTX_PROPERTY_ID for atomic_default_mem_order, only allow a single
	identifier in that.  For CTX_PROPERTY_NAME_LIST, allow identifiers
	and string literals.
	* pt.c (tsubst_attribute): Fix up STRING_CST handling if allow_string.

2019-11-13  Marek Polacek  <polacek@redhat.com>

	PR c++/89070 - bogus [[nodiscard]] warning in SFINAE.
	* cvt.c (convert_to_void): Guard maybe_warn_nodiscard calls with
	tf_warning.

2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	PR c++/92206
	* cp-tree.h (STF_STRIP_DEPENDENT): New constant.
	* tree.c (strip_typedefs): Add STF_STRIP_DEPENDENT to the flags
	when calling strip_typedefs recursively on a DECL_ORIGINAL_TYPE.
	Don't apply the fix for DR1558 in that case; allow aliases with
	dependent template parameters to be stripped instead.

2019-11-12  Nathan Sidwell  <nathan@acm.org>

	* name-lookup.c (lookup_using_decl): New function, merged from ...
	(do_class_using_decl): ... here.  Call it.  And ...
	(finish_nonmember_using_decl): ... here.  Call it.

2019-11-12  Martin Liska  <mliska@suse.cz>

	* name-lookup.c: Do not include params.h.
	* typeck.c: Likewise.

2019-11-12  Martin Liska  <mliska@suse.cz>

	* name-lookup.c (namespace_hints::namespace_hints): Replace old
	parameter syntax with the new one, include opts.h if needed.  Use
	SET_OPTION_IF_UNSET macro.
	* typeck.c (comptypes): Likewise.

2019-11-12  Maciej W. Rozycki  <macro@codesourcery.com>